# ag-ui-sql-agent

./: LICENSE  Makefile  docker-compose.yml
backend/: agent.py  app.py  models.py  pyproject.toml  result.py  settings.py  state.py  utils.py
backend/agents/: dashboard_agent.py
backend/api/: agent_state.py  dashboard.py  dashboard_config.py  dashboard_evaluation.py  sql_dependency.py
backend/models/: dashboard_config_models.py  sql_dependency_model.py
backend/results/: dashboard_config_results.py  plotly_chart_config_results.py  tool_results.py
backend/schemas/: dashboard_evaluation.py  sql_dependency.py
backend/states/: dashboard_config_state.py  dashboard_state.py
backend/utils/: generate_fernet_key.py
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/app/components/: Chat.tsx  CreateSqlDependencyButton.tsx  DashboardConfig.tsx  PandasDataFrame.tsx  PlotlyFigure.tsx  PythonMarkdown.tsx  SQLMarkdown.tsx
frontend/src/app/types/: accesify.d.ts
frontend/src/sdk/: accesifyClient.ts  index.ts
