[project]
name = "ag-ui-sql-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Lennart Weyrowitz",email = "lennart.weyrowitz@accesify.de"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai[all] (>=0.5.0,<0.6.0)",
    "pydantic-graph (>=0.5.0,<0.6.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "cryptography (>=45.0.5,<46.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pymssql (>=2.3.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"